feat(config): add environment-specific CORS configuration in application.yml and SecurityConfig